# cell-biology-learning-experience

./: .gitattributes  .gitignore  AGENTS.md  AnimalCellVillageBuilder.server.lua  BIOLOGY_RULES.md  CONTRIBUTING.md  PROJECT_PIPELINE.md  README.md  REFERENCE_IMAGE_DESIGN_PRINCIPLES.md  REVIEW_PROTOCOL.md  ROBLOX_EXPORT_RULES.md  STYLE_BIBLE.md  cell_organelle_agents_codex_prompt.md  zombie_attack_3d.html
.github/: PULL_REQUEST_TEMPLATE.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/agents/: base.py  organelle_cards.py  prompts.py  provider_base.py  provider_mock.py  provider_openai.py  registry.py  runtime.py
backend/app/api/: __init__.py  routes_admin.py  routes_agents.py  routes_cells.py  routes_sessions.py
backend/app/observability/: metrics.py
backend/app/schemas/: __init__.py  actions.py  api.py  cell_state.py  common.py  events.py  organelles.py
backend/app/security/: auth.py  rate_limit.py
backend/app/sim/: biological_rules.py  cell_cycle.py  engine.py  reducer.py  resources.py  scenarios.py
backend/app/storage/: base.py  memory_store.py  sqlite_store.py
backend/tests/: conftest.py  test_agent_validation.py  test_api_contracts.py  test_cell_cycle.py  test_scenarios.py  test_simulation_rules.py
docs/: AGENTIC_ROBLOX_ORCHESTRATION.md  CELL_BIOLOGY_PROJECT_UPDATE_2026-05-20.md  CELL_CLASSROOM_V3_RECOVERY.md  CODEX_AGENT_KIT.md  MULTI_AGENT_PRODUCTION_SYSTEM.md  ORGANELLE_DEVELOPMENT_PLAN.md  ORGANELLE_PRODUCTION_PROCESS_FLOW.md  ORGANELLE_SCALEUP_PROCESS_CHANGES.md  ROADMAP.md  (+4 more)
(+823 files in other folders)
